--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -33,6 +33,7 @@ layout: default
           %}
         {% endif %}
         {% if page.profile.more_info %}
+          <!-- div class="navbar-brand social">{% include social.liquid %}</div -->
           <div class="more-info">{{ page.profile.more_info }}</div>
         {% endif %}
       </div>
@@ -43,7 +44,8 @@ layout: default
     <!-- News -->
     {% if page.news and site.announcements.enabled %}
       <h2>
-        <a href="{{ '/news/' | relative_url }}" style="color: inherit">news</a>
+        <!-- a href="{{ '/news/' | relative_url }}" style="color: inherit">News</a -->
+        News
       </h2>
       {% include news.liquid limit=true %}
     {% endif %}
