--- a/_includes/try.html
+++ b/_includes/try.html
@@ -244,7 +244,7 @@
     <!-- Project Card 2 -->
     <div class="project-card" onclick="openModal('modal2')">
       <div class="project-image">
-        <img src="/assets/img/projects/project2.jpg" alt="Project 2">
+        <img src="/assets/img/projects/backtest.jpg" alt="Project 2">
       </div>
       <div class="project-card-body">
         <h3 class="project-title">Robo-Advisor for the Korean Individual Retirement Pension Funds</h3>
@@ -301,7 +301,7 @@
       <p class="modal-date">2024</p>
     </div>
     <div class="modal-body">
-      <img src="/assets/img/backtest.jpg" alt="Project 2" class="modal-image">
+      <img src="/assets/img/projects/backtest.jpg" alt="Project 2" class="modal-image">
       <div class="modal-description">
         <p>In 2023, the Financial Services Commission of South Korea announced the integration of quantitative approaches to investment management and advisory services into the national retirement pension system. Under this policy, "robo-advisors" - quantitative, model-driven investment systems approved by the <a href="https://www.ratestbed.kr:7443/portal/main/main.do" target="_blank" rel="noopener nofollow">Robo Advisor Test Bed Center</a> - are authorized to provide investment advisory and management services for Individual Retirement Pension (IRP) accounts beginning in the summer of 2024.</p>
         <p>In this context, we developed a semi-systematic, algorithmic trading strategy based on market cycles and seasonality theories. The strategy provides asset allocations across stock market indices and the bond market with human intervention for monthly rebalancing. The system successfully passed the six-month evaluation conducted by the Robo Advisor Test Bed Center and was officially launched in November 2024 with an initial capital of $6.7K. Since launch, the strategy has achieved a 15.58% annualized return.</p>
