--- a/_includes/try.html
+++ b/_includes/try.html
@@ -37,7 +37,7 @@
 .project-image img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .project-card-body {
@@ -153,8 +153,8 @@
   max-height: 400px;
   object-fit: contain;
   border-radius: 8px;
-  margin-bottom: 24px;
-  display: block
+  display: block;
+  margin: 0 auto 24px;
 }
 
 .modal-description {
@@ -279,7 +279,7 @@
     <div class="modal-header">
       <button class="modal-close" onclick="closeModal('modal1')">&times;</button>
       <h2 class="modal-title">PyTutor AI Tutoring Platform</h2>
-      <p class="modal-date">2024 - Present</p>
+      <p class="modal-date">Present</p>
     </div>
     <div class="modal-body">
       <img src="/assets/img/projects/pytutor.jpg" alt="Project 1" class="modal-image">
