--- a/_includes/try.html
+++ b/_includes/try.html
@@ -234,7 +234,7 @@
 <div class="projects-showcase">
   <div class="projects-grid">
         <!-- Project Card 3 -->
-    <div class="project-card" onclick="openModal('modal3')">
+    <div class="project-card" >
       <div class="project-image">
         <img src="/assets/img/projects/calctutor.png" alt="Project 3">
       </div>
@@ -273,7 +273,6 @@
 </div>
 
 <!-- Modal 1 -->
- <!-- Modal 3 -->
 <!-- <div id="modal3" class="project-modal" onclick="closeModal('modal3')">
   <div class="modal-content" onclick="event.stopPropagation()">
     <div class="modal-header">
