--- a/_includes/try.html
+++ b/_includes/try.html
@@ -265,7 +265,7 @@
       <div class="project-card-body">
         <h3 class="project-title">Robo-Advisor for the Korean Individual Retirement Pension Funds</h3>
         <p class="project-date">2024</p>
-        <p class="project-short-desc">Semi-systematic, algorithmic trading system for managing individual retirement pension funds in South Korea</p>
+        <p class="project-short-desc">Semi-systematic, algorithmic trading system for managing individual retirement pension funds in South Korea.</p>
       </div>
     </div>
 
@@ -300,7 +300,7 @@
     <div class="modal-header">
       <button class="modal-close" onclick="closeModal('modal1')">&times;</button>
       <h2 class="modal-title">PyTutor: Empowering Equitable Education Pathways in Computing with Generative AI</h2>
-      <p class="modal-date">Present</p>
+      <p class="modal-date">2024 - Present</p>
     </div>
     <div class="modal-body">
       <img src="/assets/img/projects/pytutor.jpg" alt="Project 1" class="modal-image">
