--- a/_includes/try.html
+++ b/_includes/try.html
@@ -265,7 +265,7 @@
       <div class="project-card-body">
         <h3 class="project-title">Robo-Advisor for the Korean Individual Retirement Pension Funds</h3>
         <p class="project-date">2024</p>
-        <p class="project-short-desc">Semi-systematic, algorithmic trading system for managing individual retirement pension funds in South Korea.</p>
+        <p class="project-short-desc">Risk-aligned, semi-systematic, algorithmic trading system for managing individual retirement pension funds in South Korea.</p>
       </div>
     </div>
 
@@ -329,7 +329,7 @@
       <img src="/assets/img/projects/backtest.jpg" alt="Project 2" class="modal-image">
       <div class="modal-description">
         <p>In 2023, the Financial Services Commission of South Korea announced the integration of quantitative approaches to investment management and advisory services into the national retirement pension system. Under this policy, "robo-advisors" - quantitative, model-driven investment systems approved by the <a href="https://www.ratestbed.kr:7443/portal/main/main.do" target="_blank" rel="noopener nofollow">Robo Advisor Test Bed Center</a> - are authorized to provide investment advisory and management services for Individual Retirement Pension (IRP) accounts beginning in the summer of 2024.</p>
-        <p>In this context, we developed a semi-systematic, algorithmic trading strategy based on market cycles and seasonality theories. The strategy provides asset allocations across stock market indices and the bond market with human intervention for monthly rebalancing. The system successfully passed the six-month evaluation conducted by the Robo Advisor Test Bed Center and was officially launched in November 2024 with an initial capital of $6.7K. Since launch, the strategy has achieved a 15.58% annualized return.</p>
+        <p>In this context, we developed a semi-systematic, algorithmic trading strategy based on market cycles and seasonality theories that adjusts to different investor risk preferences. The strategy provides asset allocations across stock market indices and the bond market with human intervention for monthly rebalancing. The system successfully passed the six-month evaluation conducted by the Robo Advisor Test Bed Center and was officially launched in November 2024 with an initial capital of $6.7K. Since launch, the strategy has achieved a 15.58% annualized return.</p>
       </div>
       <div class="modal-links">
       </div>
