--- a/_includes/try.html
+++ b/_includes/try.html
@@ -134,12 +134,15 @@
   color: #1a1a1a;
   margin-bottom: 10px;
   padding-right: 40px;
+  display: block;
 }
 
 .modal-date {
   font-size: 1rem;
   color: #666;
   padding-right: 50px;
+  display: block;
+  clear: both;
 }
 
 .modal-body {
